feat: Cargando el tokenizador en el notebook 03 (related to #7)

--- a/notebooks/03_dataloader_setup.ipynb
+++ b/notebooks/03_dataloader_setup.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2741e4a4",
    "metadata": {},
    "outputs": [],
@@ -166,8 +166,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "61c28786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = next(train_iter)\n",
+    "\n",
+    "sample_article = value[\"article\"]\n",
+    "sample_highlight = value[\"highlights\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "6728ffae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tokenizador Hugging Face cargado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "TOKENIZER_PATH = \"cnn_dailymail_bpe_tokenizer/tokenizer.json\"\n",
+    "tokenizer = Tokenizer.from_file(TOKENIZER_PATH)\n",
+    "print(\"\\nTokenizador Hugging Face cargado.\")\n",
+    "\n",
+    "# Probar encode/decode\n",
+    "output_hf = tokenizer.encode(sample_article)\n",
+    "output_highlight_hf = tokenizer.encode(sample_highlight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9c122172",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tokens HF para artículo (primeros 50): [19188, 15, 1522, 11, 975, 12, 806, 36, 15455, 2160, 521, 9856, 520, 4443, 2590, 2695, 501, 503, 13713, 1590, 1120, 503, 7869, 29, 17, 1427, 1669, 668, 3772, 1057, 5306, 2226, 15, 501, 1306, 10, 86, 5770, 10212, 4755, 17, 2169, 2637, 15, 3174, 29, 1427, 1276, 1042, 68]...\n",
+      "Número total de tokens HF (artículo): 795\n",
+      "Tokens HF para resumen: [2701, 3047, 5964, 563, 19255, 520, 16154, 913, 6255, 501, 1306, 1680, 17, 4859, 770, 1452, 505, 2233, 26, 15, 4055, 660, 7643, 9483, 505, 1306, 1273, 15, 8473, 17, 1530, 2916, 1314, 4099, 601, 2657, 601, 503, 17309, 538, 824, 17]\n",
+      "Número total de tokens HF (resumen): 42\n",
+      "\n",
+      "Decodificado HF: LONDON , England ( CNN ) -- A chron ology of bombings and attempted bomb attacks in the mainland UK since the 1970s : . Police close off streets around Hay market , in London ' s busy theater district . June 29 , 2007 : Police def use a...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nTokens HF para artículo (primeros 50): {output_hf.ids[:50]}...\")\n",
+    "print(f\"Número total de tokens HF (artículo): {len(output_hf.ids)}\")\n",
+    "print(f\"Tokens HF para resumen: {output_highlight_hf.ids}\")\n",
+    "print(f\"Número total de tokens HF (resumen): {len(output_highlight_hf.ids)}\")\n",
+    "\n",
+    "# Decodificar para verificar\n",
+    "print(f\"\\nDecodificado HF: {tokenizer.decode(output_hf.ids[:50])}...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42721784",
+   "metadata": {},
+   "source": [
+    "# **Creando el Dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13d4815a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c122172",
+   "id": "f7420b43",
    "metadata": {},
    "outputs": [],
    "source": []
