feat: guardando los datos filtrados en el notebook 02 como parquet

--- a/notebooks/02_data_preprocessing.ipynb
+++ b/notebooks/02_data_preprocessing.ipynb
@@ -12,19 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "252998ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\KATANA\\Desktop\\git\\Personal\\nlp-proyecto13\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Librerias\n",
     "from datasets import load_dataset\n",
@@ -37,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "9cd60c68",
    "metadata": {},
    "outputs": [],
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "3663f789",
    "metadata": {},
    "outputs": [],
@@ -559,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "ceaa0b7e",
    "metadata": {},
    "outputs": [
@@ -577,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c3e8f2f7",
    "metadata": {},
    "outputs": [],
@@ -589,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "26d30e61",
    "metadata": {},
    "outputs": [],
@@ -602,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "8f3238cb",
    "metadata": {},
    "outputs": [
@@ -622,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "14a24b9a",
    "metadata": {},
    "outputs": [
@@ -642,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "33f1dea7",
    "metadata": {},
    "outputs": [
@@ -662,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "eb786702",
    "metadata": {},
    "outputs": [
@@ -684,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "d636fd0c",
    "metadata": {},
    "outputs": [
@@ -712,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "id": "0c99be7a",
    "metadata": {},
    "outputs": [
@@ -826,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "a93c59bc",
    "metadata": {},
    "outputs": [
@@ -836,7 +827,7 @@
        "'This is some text.'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "16b31424",
    "metadata": {},
    "outputs": [
@@ -859,7 +850,7 @@
        "'This is some text with \\n newline characters.'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "7bfb0874",
    "metadata": {},
    "outputs": [],
@@ -892,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "id": "21ee8af9",
    "metadata": {},
    "outputs": [],
@@ -905,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "id": "0b845223",
    "metadata": {},
    "outputs": [
@@ -923,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "id": "7a5d7c5e",
    "metadata": {},
    "outputs": [
@@ -933,7 +924,7 @@
        "'This is some text with \\n newline characters.'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "99b22893",
    "metadata": {},
    "outputs": [],
@@ -976,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "id": "8c834340",
    "metadata": {},
    "outputs": [
@@ -986,7 +977,7 @@
        "[83, 8251, 2488, 878, 80401, 0]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "id": "75a32e04",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "id": "6e6da1c9",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1011,7 @@
        "[13225, 11, 5477, 37972]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 57,
    "id": "6b9a89b2",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1032,7 @@
        "4"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "id": "37de7edd",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1053,7 @@
        "'tiktoken es genial!'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 59,
    "id": "bee343b0",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1075,7 @@
        "[b't', b'ikt', b'oken', b' es', b' genial', b'!']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 60,
    "id": "0286996a",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1097,7 @@
        "'LONDON, England (Reuters) -- Harry Potter star Daniel Radcliffe gains access to a reported £20 million ($41.1 million) fortune as he turns 18 on Monday, but he insists the money won\\'t cast a spell on him. Daniel Radcliffe as Harry Potter in \"Harry Potter and the Order of the Phoenix\" To the disappointment of gossip columnists around the world, the young actor says he has no plans to fritter his cash away on fast cars, drink and celebrity parties. \"I don\\'t plan to be one of those people who, as soon as they turn 18, suddenly buy themselves a massive sports car collection or something similar,\" he told an Australian interviewer earlier this month. \"I don\\'t think I\\'ll be particularly extravagant. \"The things I like buying are things that cost about 10 pounds -- books and CDs and DVDs.\" At 18, Radcliffe will be able to gamble in a casino, buy a drink in a pub or see the horror film \"Hostel: Part II,\" currently six places below his number one movie on the UK box office chart. Details of how he\\'ll mark his landmark birthday are under wraps. His agent and publicist had no comment on his plans. \"I\\'ll definitely have some sort of party,\" he said in an interview. \"Hopefully none of you will be reading about it.\" Radcliffe\\'s earnings from the first five Potter films have been held in a trust fund which he has not been able to touch. Despite his growing fame and riches, the actor says he is keeping his feet firmly on the ground. \"People are always looking to say \\'kid star goes off the rails,\\'\" he told reporters last month. \"But I try very hard not to go that way because it would be too easy for them.\" His latest outing as the boy wizard in \"Harry Potter and the Order of the Phoenix\" is breaking records on both sides of the Atlantic and he will reprise the role in the last two films.  Watch I-Reporter give her review of Potter\\'s latest » . There is life beyond Potter, however. The Londoner has filmed a TV movie called \"My Boy Jack,\" about author Rudyard Kipling and his son, due for release later this year. He will also appear in \"December Boys,\" an Australian film about four boys who escape an orphanage. Earlier this year, he made his stage debut playing a tortured teenager in Peter Shaffer\\'s \"Equus.\" Meanwhile, he is braced for even closer media scrutiny now that he\\'s legally an adult: \"I just think I\\'m going to be more sort of fair game,\" he told Reuters. E-mail to a friend . Copyright 2007 Reuters. All rights reserved.This material may not be published, broadcast, rewritten, or redistributed.'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 61,
    "id": "fed2b991",
    "metadata": {},
    "outputs": [
@@ -1682,7 +1673,7 @@
        " 13]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1693,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 62,
    "id": "fa05ba91",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1694,7 @@
        "556"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "7ab5fbf7",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "e2d3a273",
    "metadata": {},
    "outputs": [],
@@ -1786,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "850876a0",
    "metadata": {},
    "outputs": [],
@@ -1800,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "id": "af5624ad",
    "metadata": {},
    "outputs": [],
@@ -1815,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "id": "bda6e98b",
    "metadata": {},
    "outputs": [
@@ -1856,7 +1847,7 @@
        "30000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "0f7dd4fb",
    "metadata": {},
    "outputs": [],
@@ -1878,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "64490c0f",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "7f582420",
    "metadata": {},
    "outputs": [],
@@ -1939,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "08700555",
    "metadata": {},
    "outputs": [],
@@ -1950,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "c46fc452",
    "metadata": {},
    "outputs": [
@@ -2057,7 +2048,7 @@
        "4                   51  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "id": "6768462f",
    "metadata": {},
    "outputs": [],
@@ -2083,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "id": "f0c99b9e",
    "metadata": {},
    "outputs": [
@@ -2169,7 +2160,7 @@
        "max          5532.000000          2092.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "id": "ec60a073",
    "metadata": {},
    "outputs": [
@@ -2274,7 +2265,7 @@
        "max          2442.000000          1878.000000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2293,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "id": "2aef9db1",
    "metadata": {},
    "outputs": [
@@ -2379,7 +2370,7 @@
        "max          3140.000000           801.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2416,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 78,
    "id": "5f30a98b",
    "metadata": {},
    "outputs": [],
@@ -2426,7 +2417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 86,
    "id": "bbc87cc4",
    "metadata": {
     "vscode": {
@@ -2482,6 +2473,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "0df117c9",
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "DIR = \"data\"\n",
+    "train_df_filtered.to_parquet(f\"{DIR}/train_filtered.parquet\")\n",
+    "validation_df_filtered.to_parquet(f\"{DIR}/validation_filtered.parquet\")\n",
+    "test_df_filtered.to_parquet(f\"{DIR}/test_filtered.parquet\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "255ddfab",
    "metadata": {},
@@ -2493,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "id": "01d1721d",
    "metadata": {},
    "outputs": [
@@ -2516,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 81,
    "id": "123f7e46",
    "metadata": {},
    "outputs": [
