feat: Definimos la clase Dataset que carga y accede a los datos preprocesados (related to #7)

--- a/notebooks/03_dataloader_setup.ipynb
+++ b/notebooks/03_dataloader_setup.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "2741e4a4",
    "metadata": {},
    "outputs": [],
@@ -58,6 +58,7 @@
     "from torch.utils.data import DataLoader\n",
     "from torchdata.datapipes.iter import IterableWrapper, Mapper\n",
     "import torchtext\n",
+    "import pandas as pd\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -71,6 +72,18 @@
     "from tokenizers.models import BPE\n",
     "from tokenizers.trainers import BpeTrainer\n",
     "from tokenizers.pre_tokenizers import Whitespace "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c2fe4488",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_filtered = pd.read_parquet(\"data/train_filtered.parquet\")\n",
+    "validation_df_filtered = pd.read_parquet(\"data/validation_filtered.parquet\")\n",
+    "test_df_filtered = pd.read_parquet(\"data/test_filtered.parquet\")"
    ]
   },
   {
@@ -246,12 +259,123 @@
    "id": "13d4815a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SummarizationDataset(Dataset):\n",
+    "    def __init__(self, dataframe, tokenizer, max_len_article, max_len_highlight, bos_token_id, eos_token_id):\n",
+    "\n",
+    "        self.dataframe = dataframe\n",
+    "        self.tokenizer = tokenizer\n",
+    "        # Ajustamos max_len para dejar espacio a BOS y EOS\n",
+    "        self.max_len_article = max_len_article - 2\n",
+    "        self.max_len_highlight = max_len_highlight - 2\n",
+    "        self.bos_token_id = bos_token_id\n",
+    "        self.eos_token_id = eos_token_id\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.dataframe)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        if torch.is_tensor(idx):\n",
+    "            idx = idx.tolist()\n",
+    "\n",
+    "        article_text = self.dataframe.iloc[idx]['article']\n",
+    "        highlight_text = self.dataframe.iloc[idx]['highlights']\n",
+    "\n",
+    "        # Tokenizar y truncar artículo\n",
+    "        self.tokenizer.enable_truncation(max_length=self.max_len_article)\n",
+    "        encoded_article = self.tokenizer.encode(article_text)\n",
+    "        article_token_ids = encoded_article.ids\n",
+    "\n",
+    "        # Tokenizar y truncar resumen\n",
+    "        self.tokenizer.enable_truncation(max_length=self.max_len_highlight)\n",
+    "        encoded_highlight = self.tokenizer.encode(highlight_text)\n",
+    "        highlight_token_ids = encoded_highlight.ids\n",
+    "\n",
+    "        # Añadir tokens BOS/EOS y convertir a tensor\n",
+    "        article_tensor = torch.cat(\n",
+    "            (torch.tensor([self.bos_token_id]),\n",
+    "             torch.tensor(article_token_ids, dtype=torch.long),\n",
+    "             torch.tensor([self.eos_token_id]))\n",
+    "        )\n",
+    "\n",
+    "        highlight_tensor = torch.cat(\n",
+    "            (torch.tensor([self.bos_token_id]),\n",
+    "             torch.tensor(highlight_token_ids, dtype=torch.long),\n",
+    "             torch.tensor([self.eos_token_id]))\n",
+    "        )\n",
+    "\n",
+    "        return article_tensor, highlight_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f7420b43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dataset de entrenamiento creado con 286766 ejemplos.\n",
+      "Dataset de validación creado con 13353 ejemplos.\n",
+      "Dataset de test creado con 11476 ejemplos.\n",
+      "\n",
+      "Ejemplo de salida del Dataset (índice 0):\n",
+      "Tensor Artículo (shape): torch.Size([570])\n",
+      "Tensor Resumen (shape): torch.Size([48])\n",
+      "Tensor Artículo (primeros/últimos tokens): tensor([    2, 19188,    15,  1522,    11, 12351,    12,   806,  3787, 11064]) ... tensor([ 4590,    15,   506,  3535,    15,   512,   506, 12217,    17,     3])\n",
+      "Tensor Resumen: tensor([    2,  3787, 11064,  1424,  3717, 22171,  3352,   100,   697,    48,\n",
+      "         8293,   519,   500,  6911,  1428,  1624,    17,  4831,  3274,   911,\n",
+      "          500,   606,   709,  2516,   510,   584, 22324,   570,  3527,  1279,\n",
+      "           17, 22171,    10,    86, 12266,   605,   833,  1299, 11064,  6006,\n",
+      "          604,   658,  1873,   501,  3510,  2497,    17,     3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAX_TOKENS_ARTICLE = 1200\n",
+    "MAX_TOKENS_HIGHLIGHT = 130\n",
+    "\n",
+    "# Definir símbolos especiales e índices\n",
+    "UNK_IDX, PAD_IDX, BOS_IDX, EOS_IDX = 0, 1, 2, 3\n",
+    "special_symbols = ['<unk>', '<pad>', '<bos>', '<eos>']\n",
+    "\n",
+    "train_dataset = SummarizationDataset(\n",
+    "    train_df_filtered, tokenizer,\n",
+    "    MAX_TOKENS_ARTICLE, MAX_TOKENS_HIGHLIGHT,\n",
+    "    BOS_IDX, EOS_IDX\n",
+    ")\n",
+    "val_dataset = SummarizationDataset(\n",
+    "    validation_df_filtered, tokenizer,\n",
+    "    MAX_TOKENS_ARTICLE, MAX_TOKENS_HIGHLIGHT,\n",
+    "    BOS_IDX, EOS_IDX\n",
+    ")\n",
+    "test_dataset = SummarizationDataset(\n",
+    "    test_df_filtered, tokenizer,\n",
+    "    MAX_TOKENS_ARTICLE, MAX_TOKENS_HIGHLIGHT,\n",
+    "    BOS_IDX, EOS_IDX\n",
+    ")\n",
+    "\n",
+    "print(f\"\\nDataset de entrenamiento creado con {len(train_dataset)} ejemplos.\")\n",
+    "print(f\"Dataset de validación creado con {len(val_dataset)} ejemplos.\")\n",
+    "print(f\"Dataset de test creado con {len(test_dataset)} ejemplos.\")\n",
+    "\n",
+    "# Probar un ejemplo\n",
+    "sample_article_tensor, sample_highlight_tensor = train_dataset[0]\n",
+    "print(\"\\nEjemplo de salida del Dataset (índice 0):\")\n",
+    "print(\"Tensor Artículo (shape):\", sample_article_tensor.shape)\n",
+    "print(\"Tensor Resumen (shape):\", sample_highlight_tensor.shape)\n",
+    "print(\"Tensor Artículo (primeros/últimos tokens):\", sample_article_tensor[:10], \"...\", sample_article_tensor[-10:])\n",
+    "print(\"Tensor Resumen:\", sample_highlight_tensor)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7420b43",
+   "id": "5b72d3c1",
    "metadata": {},
    "outputs": [],
    "source": []
