feat: Agregando la función de colación en el nb 03 (related to #7)

--- a/notebooks/03_dataloader_setup.ipynb
+++ b/notebooks/03_dataloader_setup.ipynb
@@ -373,9 +373,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e177bfb",
+   "metadata": {},
+   "source": [
+    "# Función de Colación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa98dcdd",
+   "metadata": {},
+   "source": [
+    "El objetivo de la función de colación es usar el pad_sequence para rellenar las secuencias dentro de un batch para que tengan la misma longitud, esto es para que se pueda procesar de manera paralela en un GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e204e279",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokenizer.token_to_id(\"<pad>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5b72d3c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collate_fn(batch):\n",
+    "    src_batch, tgt_batch = [], []\n",
+    "    for src_sample, tgt_sample in batch:\n",
+    "        src_batch.append(src_sample)\n",
+    "        tgt_batch.append(tgt_sample)\n",
+    "        \n",
+    "    src_batch_padded = pad_sequence(src_batch, batch_first=True, padding_value=PAD_IDX)\n",
+    "    tgt_batch_padded = pad_sequence(tgt_batch, batch_first=True, padding_value=PAD_IDX)\n",
+    "\n",
+    "    return src_batch_padded, tgt_batch_padded"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b72d3c1",
+   "id": "c94d49d6",
    "metadata": {},
    "outputs": [],
    "source": []
