docs: Agregando comentarios al notebook

--- a/notebooks/04_model_structure.ipynb
+++ b/notebooks/04_model_structure.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "f0cf4f5a",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
       "Forward pass completado sin errores.\n",
       "  Shape de la salida (outputs): torch.Size([4, 68, 30000])\n",
       "  Shape esperada: (4, 68, 30000)\n",
-      "¡Las dimensiones de salida son correctas!\n"
+      "Las dimensiones de salida son correctas\n"
      ]
     }
    ],
@@ -587,7 +587,7 @@
     "\n",
     "    print(\"\\nEjecutando forward pass del modelo...\")\n",
     "    try:\n",
-    "        outputs = model(src_batch, trg_batch) # teacher_forcing_ratio=0 para probar sin él\n",
+    "        outputs = model(src_batch, trg_batch) # teacher_forcing_ratio=0 \n",
     "\n",
     "        print(\"Forward pass completado sin errores.\")\n",
     "        print(f\"  Shape de la salida (outputs): {outputs.shape}\")\n",
@@ -596,10 +596,9 @@
     "        print(f\"  Shape esperada: {expected_shape}\")\n",
     "\n",
     "        if outputs.shape == expected_shape:\n",
-    "            print(\"¡Las dimensiones de salida son correctas!\")\n",
+    "            print(\"Las dimensiones de salida son correctas\")\n",
     "        else:\n",
-    "            print(\"¡Advertencia! Las dimensiones de salida NO coinciden con las esperadas.\")\n",
-    "            print(f\"Verifica la implementación de Seq2Seq.forward y el uso de batch_first en el Decoder.\")\n",
+    "            print(\"Las dimensiones no coinciden. Revisar\")\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"\\nError durante el forward pass: {e}\")\n",
