feat: Agregando las funciones del entrenamiento y validacion (closes #8)

--- a/notebooks/05_training_setup.ipynb
+++ b/notebooks/05_training_setup.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "15910b78",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,9 @@
     "        batch_size = encoder_outputs.shape[0]\n",
     "        src_len = encoder_outputs.shape[1]\n",
     "\n",
-    "        decoder_hidden_repeated = decoder_hidden.unsqueeze(1).repeat(1, src_len, 1)\n",
+    "        hidden = decoder_hidden[-1, :, :] # Solo tomamos la ultima capa\n",
+    "\n",
+    "        decoder_hidden_repeated = hidden.unsqueeze(1).repeat(1, src_len, 1)\n",
     "\n",
     "        energy = torch.tanh(self.attn_W_enc(encoder_outputs) + self.attn_W_dec(decoder_hidden_repeated))\n",
     "\n",
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4740d977",
    "metadata": {},
    "outputs": [],
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ce61dd3f",
    "metadata": {},
    "outputs": [],
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6f65495b",
    "metadata": {},
    "outputs": [
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4904dbb9",
    "metadata": {},
    "outputs": [],
@@ -403,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "2fdd89db",
    "metadata": {},
    "outputs": [
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "ae141a14",
    "metadata": {},
    "outputs": [
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "faeee3a3",
    "metadata": {},
    "outputs": [
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fed62d76",
    "metadata": {},
    "outputs": [
@@ -576,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "becccca2",
    "metadata": {},
    "outputs": [
@@ -612,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7fc8ff37",
    "metadata": {},
    "outputs": [
@@ -641,7 +643,7 @@
        ")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "24751860",
    "metadata": {},
    "outputs": [
@@ -704,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "02682453",
    "metadata": {},
    "outputs": [
@@ -731,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "19bf3a7b",
    "metadata": {},
    "outputs": [],
@@ -741,6 +743,182 @@
     "    elapsed_mins = int(elapsed_time / 60)\n",
     "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
     "    return elapsed_mins, elapsed_secs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9b0244",
+   "metadata": {},
+   "source": [
+    "## Implementamos las funciones train y evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f02053fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, iterator, optimizer, criterion, clip):\n",
+    "    \"\"\"\n",
+    "    Realiza una época completa de entrenamiento.\n",
+    "\n",
+    "    Args:\n",
+    "        model (Seq2Seq): El modelo a entrenar.\n",
+    "        iterator (DataLoader): DataLoader para los datos de entrenamiento.\n",
+    "        optimizer (optim.Optimizer): Optimizador\n",
+    "        criterion (nn.Module): Función de pérdida\n",
+    "        clip (float): Valor máximo para el recorte de gradientes\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Perdida (loss) promedio por epoca.\n",
+    "    \"\"\"\n",
+    "    model.train()  # Modelo en modo entrenamiento\n",
+    "    epoch_loss = 0\n",
+    "\n",
+    "    # Iterampos sobre los batches del DataLoader\n",
+    "    for i, batch in enumerate(iterator):\n",
+    "        src = batch[0].to(DEVICE) \n",
+    "        trg = batch[1].to(DEVICE) \n",
+    "\n",
+    "        optimizer.zero_grad() # Limpiamos los gradientes\n",
+    "\n",
+    "        output = model(src, trg, teacher_forcing_ratio=0.5) \n",
+    "\n",
+    "        output_dim = output.shape[-1] \n",
+    "\n",
+    "        # Quitamos el token especial <BOS>\n",
+    "        output_reshaped = output[:, 1:, :].reshape(-1, output_dim)\n",
+    "\n",
+    "        # Quitamos el token <BOS> del target y redimensionar\n",
+    "        trg_reshaped = trg[:, 1:].reshape(-1)\n",
+    "\n",
+    "        # Calculamos la perdida\n",
+    "        loss = criterion(output_reshaped, trg_reshaped)\n",
+    "\n",
+    "        # Backpropagation\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Recortamos el gradiente con el clip\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), clip)\n",
+    "\n",
+    "        # Actualizar los pesos\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # Acumulamos las perdidas\n",
+    "        epoch_loss += loss.item()\n",
+    "\n",
+    "        # Imprimimos el progreso cada 100 batches\n",
+    "        if (i + 1) % 100 == 0:\n",
+    "            print(f\"  Batch {i+1}/{len(iterator)} - Loss: {loss.item():.4f}\")\n",
+    "\n",
+    "    return epoch_loss / len(iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "909772c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(model, iterator, criterion):\n",
+    "    \"\"\"\n",
+    "    Realiza una epoca completa de evaluacion.\n",
+    "\n",
+    "    Args:\n",
+    "        model (Seq2Seq): El modelo a evaluar.\n",
+    "        iterator (DataLoader): DataLoader para los datos de validación\n",
+    "        criterion (nn.Module): Función de pérdida \n",
+    "\n",
+    "    Returns:\n",
+    "        float: Perdida (loss) promedio por cada epoca.\n",
+    "    \"\"\"\n",
+    "    model.eval() # Podemos el modelo en modo evaluacion osea que se desactiva el dropout\n",
+    "    epoch_loss = 0\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for i, batch in enumerate(iterator):\n",
+    "            src = batch[0].to(DEVICE)\n",
+    "            trg = batch[1].to(DEVICE)\n",
+    "\n",
+    "            output = model(src, trg, teacher_forcing_ratio=0) # para evaluar se pone el teacher_forcing_ratio en 0\n",
+    "\n",
+    "            output_dim = output.shape[-1]\n",
+    "            output_reshaped = output[:, 1:, :].reshape(-1, output_dim)\n",
+    "            trg_reshaped = trg[:, 1:].reshape(-1)\n",
+    "\n",
+    "            # Calcular la perdida\n",
+    "            loss = criterion(output_reshaped, trg_reshaped)\n",
+    "\n",
+    "            # Acumular la perdida del batch\n",
+    "            epoch_loss += loss.item()\n",
+    "\n",
+    "    # Devolver la perdida promedio de cada epoca\n",
+    "    return epoch_loss / len(iterator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1b81531",
+   "metadata": {},
+   "source": [
+    "## Bucle de entrenamiento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e0b7148",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Iniciando Entrenamiento para 10 epocas ---\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import math    \n",
+    "\n",
+    "best_valid_loss = float('inf') # Inicializar con infinito para asegurar que la primera perdida sea mejor\n",
+    "\n",
+    "print(f\"\\n--- Iniciando Entrenamiento para {N_EPOCHS} epocas ---\")\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "    # --- Bucle de Entrenamiento ---\n",
+    "for epoch in range(N_EPOCHS):\n",
+    "\n",
+    "    start_time = time.time() \n",
+    "\n",
+    "\n",
+    "    train_loss = train(model, train_dataloader, optimizer, criterion, CLIP)\n",
+    "\n",
+    "    valid_loss = evaluate(model, val_dataloader, criterion)\n",
+    "\n",
+    "    end_time = time.time() \n",
+    "\n",
+    "    # Calcular duración de la época\n",
+    "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
+    "\n",
+    "    if valid_loss < best_valid_loss:\n",
+    "        best_valid_loss = valid_loss\n",
+    "        torch.save(model.state_dict(), 'best-seq2seq-model.pt')\n",
+    "        print(f\"\\t** Modelo guardado en época {epoch+1} (Mejor valid loss) **\")\n",
+    "\n",
+    "    print(f'Epoch: {epoch+1:02} | Tiempo: {epoch_mins}m {epoch_secs}s')\n",
+    "    print(f'\\tTrain Loss: {train_loss:.3f} | Train PPL: {math.exp(train_loss):7.3f}')\n",
+    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. PPL: {math.exp(valid_loss):7.3f}')\n",
+    "\n",
+    "print(\"\\n--- Entrenamiento Finalizado ---\")\n",
+    "print(f\"Mejor Validation Loss alcanzado: {best_valid_loss:.3f}\")"
    ]
   },
   {
